# cmake_project

./: .gitignore  CMakeLists.txt  MainConfig.h.in  README.md  build-and-run  build-and-test  build_production.sh  build_test.sh  clean_cmake_output  clean_cmake_output.sh  configure_production.sh  configure_test.sh  run_production.sh  run_test.sh
.github/workflows/: cmake-build-the-application.yml  cmake-single-platform.yml
main/: CMakeLists.txt  main.c
module_a/: CMakeLists.txt
module_b/: CMakeLists.txt  module_b.c
module_c/: CMakeLists.txt  module_c.c  module_c.h
modules/module_a/: CMakeLists.txt
modules/module_b/: CMakeLists.txt  module_b.h
modules/module_c/: CMakeLists.txt
src/: CMakeLists.txt  MainConfig.h.in
src/modules/: CMakeLists.txt
src/modules/module_a/: CMakeLists.txt
src/modules/module_b/: CMakeLists.txt
src/modules/module_c/: CMakeLists.txt
test/: CMakeLists.txt
test/suite_module_a/: CMakeLists.txt  test_module_a.c
test/suite_module_b/: CMakeLists.txt  test_module_b.c
test/suite_module_c/: CMakeLists.txt  test_module_c.c
